--- a/src/Tecnotek/ExpedienteBundle/Resources/views/SuperAdmin/Reports/zone.html.twig
+++ b/src/Tecnotek/ExpedienteBundle/Resources/views/SuperAdmin/Reports/zone.html.twig
@@ -5,15 +5,10 @@
 {% endblock %}
 
 {% block extrajs %}
+<script type="text/javascript" src="{{ asset('expediente/js/jquery.printElement.min.js') }}"></script>
 <script type="text/javascript">
     Tecnotek.module = "reports";
     Tecnotek.assetsURL = "{{ path('TecnotekExpedienteBundle_homepage')}}";
-    Tecnotek.UI.urls["getStudentsURL"] = "{{ path('_expediente_sysadmin_student_ajax_list')}}";
-    Tecnotek.UI.urls["loadStudentRelativesURL"] = "{{ path('_expediente_sysadmin_relatives_list')}}";
-    Tecnotek.UI.urls["saveTicketURL"] = "{{ path('_expediente_sysadmin_ticket_save')}}";
-    Tecnotek.StudentShow.translates["relative.not.selected"] = "{% trans %}message.relative.not.selected{% endtrans %}";
-    Tecnotek.StudentShow.translates["student.not.selected"] = "{% trans %}message.student.not.selected{% endtrans %}";
-    Tecnotek.StudentShow.translates["relative.not.exists"] = "{% trans %}message.relative.not.exists{% endtrans %}";
 </script>
 {% endblock %}
 
@@ -22,45 +17,59 @@
     <div class="grid_24">
         <div>
             <div class="left">
-                <h1>{% trans %}label.reports.routes{% endtrans %}</h1>
+                <h1>{% trans %}label.reports.routes.by.zone{% endtrans %}</h1>
             </div>
-            <div class="left" style="line-height: 48px; margin-left: 25px;">
-                <span>{% trans %}label.reports.routes.message{% endtrans %}</span>
-            </div>
+            <button style="margin-left: 15px; margin-top: 0px;" type="button" class="right btn print" id="btnPrint" name="btnPrint" rel="Rutas por Zona"><span></span>{% trans %}label.print{% endtrans %}</button>
             <div class="clear"></div>
         </div>
-        <div class="search-results" style="margin-top: 25px;">
-            <div class="row tableHeader" style="height: 32px; line-height: 32px;">
-                <div class="option_width" style="float: left; width: 150px;">{% trans %}label.name{% endtrans %}</div>
-                <div class="option_width" style="float: left; width: 115px;">{% trans %}label.licensePlate{% endtrans %}</div>
-                <div class="option_width" style="float: left; width: 150px;">{% trans %}label.driver{% endtrans %}</div>
-                <div class="option_width" style="float: left; width: 110px;">{% trans %}label.color{% endtrans %}</div>
-                <div class="option_width" style="float: left; width: 110px;">{% trans %}label.capacity{% endtrans %}</div>
-                <div class="option_width" style="float: left; width: 110px;">{% trans %}label.route{% endtrans %}</div>
-                <button style="margin-left: 15px; margin-top: 0px;" type="button" class="right btn print" name="search"><span></span>{% trans %}label.print{% endtrans %}</button>
+
+        <div id="report" style="margin-top: 25px;">
+
+            <div class="titles" style="font-size: 10px;">
+                <div class="left">Corporación Educativa Saint Michael S.A.</div>
+                <div class="right">Control de Buses Escuela.</div>
+                <div class="clear"></div>
+
+                <div class="left">{{ "now"|date("d/M/Y H:i:s") }}</div>
+                <div class="clear"></div>
+
+                <p style="text-align: center;">Rutas Asignadas por Zona</p>
             </div>
 
             {% for entity in entities %}
-                <div class="row userRow " style="background-color: #fff5ee;">
-                    <div class="option_width" style="float: left; width: 150px;">{{ entity.name }}</div>
+            {% set zoneCounter = 0 %}
+            <div class="fields_row">
+                <div class="field_value" style="text-align: center;">Zona {{ loop.index }}: {{ entity.name }}</div>
+                <div class="clear"></div>
+            </div>
+                {% for route in entity.routes %}
+                <div class="fields_row route">
+                    Ruta {{ loop.index }}: {{ route.code ~ " - " ~ route.description }}
+                </div>
+                <div class="fields_row student_title">
+                    <div style="float: left; width: 115px;">{%trans%}label.carne{%endtrans%}</div>
+                    <div style="float: left; width: 300px;">{%trans%}label.student.name{%endtrans%}</div>
+                    <div style="float: left; width: 115px;">{%trans%}label.section{%endtrans%}</div>
+                    <div style="float: left; width: 115px;">{%trans%}label.address{%endtrans%}</div>
                     <div class="clear"></div>
                 </div>
-                {% for route in entity.routes %}
-                    <div class="row userRow tableRowOdd">
-                        <div class="option_width" style="float: left; width: 50px;"></div>
-                        <div class="option_width" style="float: left; width: 150px;">{{ route.code }}</div>
-                        <div class="option_width" style="float: left; width: 115px;">{{ route.name }}</div>
-                        <div class="clear"></div>
+                    {% for student in route.students %}
+                    <div class="student_row">
+                        <div style="float: left; width: 115px;">{{ student.carne }}</div>
+                        <div style="float: left; width: 300px;">{{ student }}</div>
+                        <div style="float: left; width: 115px;">&nbsp;</div>
+                        <div style="float: left; width: 390px;">{{ student.address }}</div>
                     </div>
-                    {% for bus in route.buses %}
-                    <div class="row userRow tableRow">
-                        <div class="option_width" style="float: left; width: 100px;"></div>
-                        <div class="option_width" style="float: left; width: 150px;">{{ bus.name }}</div>
-                        <div class="option_width" style="float: left; width: 115px;">{{ bus.licensePlate }}</div>
-                        <div class="clear"></div>
-                    </div>
+                    <div class="clear"></div>
                     {% endfor %}
+                    <div class="student_footer">
+                        Total de estudiantes por ruta: {{ route.students|length}}
+                        {% set zoneCounter = zoneCounter + (route.students|length) %}
+                    </div>
                 {% endfor %}
+                <div class="footer">
+                    Total de estudiantes por zona: {{ zoneCounter }}
+                </div>
             {% else %}
             <div class="row userRow {% if loop.index%2 == 0 %}tableRowOdd{%else%}tableRow{% endif %}">
                 <div class="option_width" style="float: left; width: 375px;">{% trans %}results.not.found{% endtrans %}</div>
