--- a/src/Tecnotek/ExpedienteBundle/Resources/views/SuperAdmin/Student/show.html.twig
+++ b/src/Tecnotek/ExpedienteBundle/Resources/views/SuperAdmin/Student/show.html.twig
@@ -54,6 +54,36 @@
                                 <div id="labelName" class="left">{{ entity.lastname }}</div>
                                 <div class="clear"></div>
                             </div>
+                            <div>
+                                <div class="left" style="width: 150px; font-weight: bold;">{%trans%}label.carne{%endtrans%}</div>
+                                <div id="carne" class="left">{{ entity.carne }}</div>
+                                <div class="clear"></div>
+                            </div>
+                            <div>
+                                <div class="left" style="width: 150px; font-weight: bold;">{%trans%}label.address{%endtrans%}</div>
+                                <div id="address" class="left">{{ entity.address }}</div>
+                                <div class="clear"></div>
+                            </div>
+                            <div>
+                                <div class="left" style="width: 150px; font-weight: bold;">{%trans%}label.fatherPhone{%endtrans%}</div>
+                                <div id="fatherPhone" class="left">{{ entity.fatherPhone }}</div>
+                                <div class="clear"></div>
+                            </div>
+                            <div>
+                                <div class="left" style="width: 150px; font-weight: bold;">{%trans%}label.motherPhone{%endtrans%}</div>
+                                <div id="motherPhone" class="left">{{ entity.motherPhone }}</div>
+                                <div class="clear"></div>
+                            </div>
+                            <div>
+                                <div class="left" style="width: 150px; font-weight: bold;">{%trans%}label.pickUp{%endtrans%}</div>
+                                <div id="pickUp" class="left">{{ entity.pickUp }}</div>
+                                <div class="clear"></div>
+                            </div>
+                            <div>
+                                <div class="left" style="width: 150px; font-weight: bold;">{%trans%}label.leaveTime{%endtrans%}</div>
+                                <div id="leaveTime" class="left">{{ entity.leaveTime }}</div>
+                                <div class="clear"></div>
+                            </div>
 
                             <div id="buttonsContainer" style="margin-top: 25px;">
                                 <a href="{{ path('_expediente_sysadmin_student_edit', {'id': entity.id}) }}" class="left btn edit"><span></span>{% trans %}label.edit{% endtrans %}</a>
