--- a/src/Tecnotek/ExpedienteBundle/Resources/views/logged_layout.html.twig
+++ b/src/Tecnotek/ExpedienteBundle/Resources/views/logged_layout.html.twig
@@ -96,16 +96,18 @@
                         <li><a style="text-align: left;" href="{{ path('_expediente_sysadmin_student') }}">{% trans %}label.students{% endtrans %}</a></li>
                         <li><a style="text-align: left;" href="{{ path('_expediente_sysadmin_club') }}">{% trans %}label.clubs{% endtrans %}</a></li>
                         <li><a style="text-align: left;" href="{{ path('_expediente_sysadmin_ticket') }}">{% trans %}label.tickets{% endtrans %}</a></li>
+                        <li><a style="text-align: left;" href="{{ path('_expediente_absences') }}">{% trans %}label.absences{% endtrans %}</a></li>
                     </ul>
                 </li>
                 <li {% if menuIndex is defined and menuIndex == 4%}class="current"{% endif %}><a href="#"><em>{% trans %}label.reports{% endtrans %}</em><strong></strong></a>
                     <ul>
                         <li><a style="text-align: left;" href="{{ path('_expediente_report_bus') }}">{% trans %}label.buses{% endtrans %}</a></li>
-                        <li><a style="text-align: left;" href="{{ path('_expediente_report_zones') }}">{% trans %}label.routes{% endtrans %}</a></li>
+                        <li><a style="text-align: left;" href="{{ path('_expediente_report_routes') }}">{% trans %}label.routes{% endtrans %}</a></li>
+                        <li><a style="text-align: left;" href="{{ path('_expediente_report_zones') }}">{% trans %}label.routes.by.zone{% endtrans %}</a></li>
+                        <li><a style="text-align: left;" href="{{ path('_expediente_report_students_by_route') }}">{% trans %}label.students.by.route{% endtrans %}</a></li>
                     </ul>
                 </li>
             {% endif %}
-				<li><a href="index-6.html"><em>contacts</em><strong></strong></a></li>
 			</ul>
 			<div class="clear"></div>
 		</nav>
@@ -118,40 +120,10 @@
 	<div class=" container_24">
 		<div class="wrapper">
 			<div class="grid_6 suffix_2">
-				<h1 class="footer-logo"><a href="index.html">idealex</a></h1>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit ultricies odio magna.</p>
 				<p class="color1 privacy">&copy; 2012 <span>|</span>  <a href="index-7.html">Privacy Policy</a> <!--  --></p>
 			</div>
-			<div class="grid_7 suffix_2">
-				<h4>Related Links</h4>
-				<div class="wrapper">
-					<div class="grid_4 alpha">
-						<ul class="footer-list">
-							<li><a href="more.html">About Us</a></li>
-							<li><a href="more.html">Testimonials</a></li>
-							<li><a href="more.html">Our Staff</a></li>
-							<li><a href="more.html">Events &amp; Press</a></li>
-							<li><a href="more.html">Contact Us</a></li>
-						</ul>
-					</div>
-					<div class="grid_3 omega">
-						<ul class="footer-list">
-							<li><a href="more.html">Sign Up</a></li>
-							<li><a href="more.html">Forums</a></li>
-							<li><a href="more.html">Affiliate Program</a></li>
-							<li><a href="more.html">FAQ</a></li>
-						</ul>
-					</div>
-				</div>
-			</div>
-			<div class="grid_7">
-				<h4>Follow Us</h4>
-				<ul class="tooltips">
-					<li><a href="more.html"><img src="{{ asset('expediente/images/icon1.png') }}" alt=""><span>RSS</span></a></li>
-					<li><a href="more.html"><img src="{{ asset('expediente/images/icon3.png') }}" alt=""><span>Facebook</span></a></li>
-					<li><a href="more.html"><img src="{{ asset('expediente/images/icon2.png') }}" alt=""><span>Twitter</span></a></li>
-				</ul>
-			</div>
+            <div class="right">Powered by <a href="http://www.tecnotekcr.net/" target="_blank" style="color: #fff; font-weight: bold;">Tecnotek</a></div>
+            <div class="clearer"></div>
 		</div>
 	</div>
 </footer>
