--- a/web/expediente/css/style.css
+++ b/web/expediente/css/style.css
@@ -262,3 +262,4 @@ footer h4{ color:#fff;}
 #report .student_title{border-bottom: thin solid #000; font-size: 11px; color: #000; font-weight: bold; line-height: 16px; height: 14px; margin-bottom: 15px; margin-top: 15px;}
 #report .student_row{font-size: 11px; height: 14px; line-height: 16px; color: #000;}
 #report .student_footer{font-size: 10px; color: #000; font-weight: bold;}
+#report .area_title{font-weight: bold; margin-top: 25px; text-decoration: underline; color: #000;}
