--- a/src/Tecnotek/ExpedienteBundle/Resources/views/SuperAdmin/Absence/index.html.twig
+++ b/src/Tecnotek/ExpedienteBundle/Resources/views/SuperAdmin/Absence/index.html.twig
@@ -54,8 +54,9 @@
 <script type="text/javascript">
 
 $(function() {
-//$(".modalbox").fancybox();
+    $(".modalbox").fancybox();
 //$("#contact").submit(function() { return false; });
+});
 </script>
 {% endblock %}
 
