--- a/web/expediente/css/pro_pages_style.css
+++ b/web/expediente/css/pro_pages_style.css
@@ -2039,6 +2039,7 @@ background: linear-gradient(#575757, #141414);
 .editButton {background: url(../images/icons/token_dark_full.png) no-repeat left 0px; background-position-x: -78px; background-position-y: -42px;}
 /*.btn.delete span{ display:inline-block; background: url(../images/icons/icons-dark.png) -1728px -36px;margin:0 7px 0 0}*/
 .deleteButton {background: url(../images/icons/icons-dark.png) -1728px -36px;}
+.adminButton {background: url(../images/icons/setup.png) no-repeat left 0px;}
 .viewButton {background: url(../images/icons/token_dark_full.png) no-repeat left 0px; background-position-x: -144px; background-position-y: -438px;}
 .imageButton { width: 26px; height: 24px; margin-right: 5px;}
 .imageButton:hover {cursor: pointer;}
