--- a/src/Tecnotek/ExpedienteBundle/Resources/views/logged_layout.html.twig
+++ b/src/Tecnotek/ExpedienteBundle/Resources/views/logged_layout.html.twig
@@ -122,6 +122,8 @@
                         <li><a style="text-align: left;" href="{{ path('_expediente_sysadmin_period') }}">{% trans %}label.period{% endtrans %}</a></li>
                         <li><a style="text-align: left;" href="{{ path('_expediente_sysadmin_grade') }}">{% trans %}label.grade{% endtrans %}</a></li>
                         <li><a style="text-align: left;" href="{{ path('_expediente_sysadmin_course') }}">{% trans %}label.course{% endtrans %}</a></li>
+                        <li><a style="text-align: left;" href="{{ path('_expediente_sysadmin_qualifications') }}">{% trans %}label.qualifications{% endtrans %}</a></li>
+
                     </ul>
                 </li>
             {% endif %}
