--- a/src/Tecnotek/ExpedienteBundle/Resources/views/SuperAdmin/Qualification/index.html.twig
+++ b/src/Tecnotek/ExpedienteBundle/Resources/views/SuperAdmin/Qualification/index.html.twig
@@ -24,6 +24,33 @@
 
 $(function() {
    // $(".modalbox").fancybox();
+
+
+    $(".textField").blur(function(e){
+        e.preventDefault();
+        $this = $(this);
+        $type = $this.attr('tipo');
+        $nota = $this.val();
+
+        if($type == 1){
+            $percentage = $this.attr('perc');
+            $totalField = $("#" + $this.attr('rel'));
+            console.debug("Type = " + $type + ", Nota: " + $nota + ", Perc = " + $percentage + " :: " + $totalField);
+            if($nota == "") {
+                $totalField.html("-");
+            } else {
+                console.debug("Calcular total para " + $(this).attr('rel') + ", total = " + ($percentage * $nota / 100));
+                $totalField.html("" + ($percentage * $nota / 100) + "%");
+            }
+            //p / 100 = x / nota
+            //p * nota / 100;
+
+
+        } else {
+
+        }
+
+    });
 });
 </script>
 {% endblock %}
@@ -34,17 +61,27 @@ $(function() {
 <link rel="stylesheet" href="{{ asset('expediente/css/jquery-ui-timepicker-addon.css') }}" type="text/css" media="all" />
 <style>
     .qualificationTable{ margin-top: 75px; margin-bottom: 50px;}
-    .qualificationTable .itemNota{ background-color: #04D0E6; }
-    .qualificationTable .itemPromedio{ background-color: #0d88c1; }
-    .qualificationTable .itemPorcentage{ background-color: #38255c; }
-    .qualificationTable .itemHeader {font-weight: bold; color: #fff; position: absolute; text-align: center; float: left; width: 150px; height: 25px; line-height: 25px; vertical-align: middle; border: solid thin #000;
+    .qualificationTable .itemNota{ background-color: #A4D2FD; }
+    .qualificationTable .itemPromedio{ background-color: #5F96E7; }
+    .qualificationTable .itemPorcentage{ background-color: #B698EE; }
+    .qualificationTable .itemHeader {font-weight: bold; color: #000;
+        position: absolute;
+        text-align: center; float: left; width: 150px; height: 32px; line-height: 32px; vertical-align: middle;
+        border: solid thin black; top: 60px;
         -moz-transform: rotate(90deg);  /* FF3.5+ */
         -o-transform: rotate(90deg);  /* Opera 10.5 */
         -webkit-transform: rotate(90deg);  /* Saf3.1+, Chrome */
         filter:  progid:DXImageTransform.Microsoft.BasicImage(rotation=0.90);  /* IE6,IE7 */
         -ms-filter: "progid:DXImageTransform.Microsoft.BasicImage(rotation=0.90)"; /* IE8 */
     }
+    .qualificationTable .itemHeaderCode {font-weight: bold; color: #000; /*position: absolute; */text-align: center; float: left; width: 32px; height: 25px; line-height: 25px;
+        vertical-align: middle; border-bottom: solid thin black; border-right: solid thin black; border-left: solid thin black; border-top: solid thin black;}
 
+    .qualificationTable .itemHeader2 {font-weight: bold; color: #000; /*position: absolute; */text-align: center; float: left; width: 32px; height: 25px; line-height: 25px;
+        vertical-align: middle; border-bottom: solid thin black; border-right: solid thin black; border-left: solid thin black;}
+
+    .qualificationTable .textField {font-weight: bold; color: #000; /*position: absolute; */text-align: center; float: left; width: 18px; height: 11px; line-height: 11px;
+        vertical-align: middle; border-bottom: solid thin black; border-right: solid thin black; border-left: solid thin black; border-top: solid thin black; font-size: 10px;}
 </style>
 {% endblock %}
 
@@ -64,21 +101,10 @@ $(function() {
         <div class="clear"></div>
         <div class="qualificationTable">
             {{ table|raw }}
-            <div class="clearer"></div>
+            <div class="clear"></div>
         </div>
 
         <br /><br /> <br /><br /> <br /><br />
-        <div class="qualificationTable">
-            <div class="itemHeader itemNota" style="margin-left: 0px;">Parcial 1</div>
-            <div class="itemHeader itemPorcentage" style="margin-left: 25px;">20 % Parcial 1</div>
-            <div class="itemHeader itemNota" style="margin-left: 50px;">Parcial 2</div>
-            <div class="itemHeader itemPorcentage" style="margin-left: 75px;">20 % Parcial 2</div>
-            <div class="itemHeader itemNota" style="margin-left: 100px;">Tarea 1</div>
-            <div class="itemHeader itemNota" style="margin-left: 125px;">Tarea 2</div>
-            <div class="itemHeader itemPromedio" style="margin-left:150px;">Promedio Tareas </div>
-            <div class="itemHeader itemPorcentage" style="margin-left: 175px;">10 % Tarea</div>
-            <div class="clearer"></div>
-        </div>
         <br /><br /><br /><br />
     </div>
     <div class="clear"></div>
